--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="css-display.html">Using the display property</a></li>
             <li><a href="css-position.html">Using the position property</a></li>
             <li><a href="css-float.html">Using float and clear properties</a></li>
+	    <li><a href="js-collapse.html">Using float and clear properties</a></li>
         </ul>
     </nav>
 
